--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 	</main>
 	<footer>
 		<p>&copy; 2022, San Joaquin Valley Town Hall, Fresno, CA 93755</p>
+		<p>Azumi Castaneda</p>
 	</footer>
 </body>
 </html
